code review
Signed-off-by: Pavel Stetsuk <pstetsuk@gmail.com>